--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,5 @@ jobs:
         pip3 install -r requirements.txt
     - name: Run Django unit tests
       run: |
+        cd backend/api/lexical
         python3 manage.py test
