--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,9 +25,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+        cache-dependency-path: 'frontend/package-lock.json'
         cache: 'npm'
-        cache-dependency-path: |
-          cd frontend/package-lock.json
     - run:  |
         cd frontend
         npm ci
